--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,7 @@ body {
 }
 
 .container-pg {
-	@apply mx-auto max-w-7xl px-4 sm:px-6 lg:px-8;
+	@apply mx-auto max-w-7xl px-3 sm:px-4 md:px-6 lg:px-8;
 }
 
 .skeleton {
