--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
 	src: url('/fonts/Wildchill.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
-	font-display: swap;
+	font-display: swap; /* Show fallback immediately, swap when font loads */
 }
 
 /* Modern font family */
