--- a/app/globals.css
+++ b/app/globals.css
@@ -317,3 +317,14 @@ body {
 .bg-brand-accent {
 	background-color: #F4991A;
 }
+
+/* Hide number input spinners (increment/decrement arrows) */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+input[type="number"] {
+	-moz-appearance: textfield;
+}
